--- a/web/src/ui/styles/globals.css
+++ b/web/src/ui/styles/globals.css
@@ -1,18 +1,6 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: Poppins, sans-serif;
-  background: #f0f0f0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: Inter, sans-serif;
 }
